<resources>
    <string name="app_name">NPI Now</string>
    <string name="action_settings">Настройки</string>
    <string name="action_timetable">Неделя</string>
    <string name="action_refresh">Обновить</string>
    <string name="action_another">Переключить недели</string>
    <string name="action_task">Задания</string>
    <string name="action_alert">Создать напоминание</string>
    <string name="action_done">Готово</string>
    <string name="shortcut_1_short_label1">Сейчас</string>
    <string name="shortcut_1_long_label1">Сейчас</string>
    <string name="shortcut_1_disabled_message1">Сейчас</string>
    <string name="shortcut_2_short_label1">Неделя</string>
    <string name="shortcut_2_long_label1">Неделя</string>
    <string name="shortcut_2_disabled_message1">Неделя</string>
    <string name="refresh_started">Загрузка начата</string>
    <string name="refresh_finished">Загрузка закончена</string>
    <string name="refresh_error">Проверьте соединение с Интернет</string>
    <string name="cash_error">Ошибка чтения кэща! Загрузите раписание ещё раз</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="hello">Здравствуйте!</string>
    <string name="descriptionhello">Нам необходимо кое-что узнать о Вас перед тем, как начать.</string>
    <string name="ok">Готово</string>
    <string name="data_manage_title">Управлоение данными</string>
    <string name="task_title">Название</string>
    <string name="task_task">Задание</string>
    <string name="notification_stat_def">Нет напоминания</string>
    <string name="your_fac">Ваш факультет?</string>
    <string name="your_curs">На каком вы курсе?</string>
    <string name="your_group">В какой группе учитесь?</string>

    <!-- Strings related to Settings -->
    <string name="setting_header">Настройки</string>
    <string name="pref_fac">Факультет</string>
    <string name="pref_main_title">Основные</string>
    <string name="pref_data_title">Приложение</string>
    <string name="pref_theme_title">Внешний вид</string>
    <string name="pref_group">Группа</string>
    <string name="pref_group_def">2,2х</string>
    <string name="pref_curs">Курс</string>
    <string name="pref_group_pref">Укажите ТОЛЬКО название группы кириллицей, например, для группы \"ФИТУ-3-2,2х\"
    необходимо написать \"2,2х\"</string>
    <string name="title_activity_lesson_view">LessonViewActivity</string>
    <string name="data_btn">Управление данными</string>
    <string name="pref_theme">Выбор темы приложения</string>
    <string name="pref_colors">Показывать цвета</string>
    <string name="pref_colorsdisc">Отмечать разными цветами типы занятий</string>
    <string name="pref_weeks">Переключать недели в понедельник</string>
    <string name="pref_weeksdisc">Если выключено, недели переключатся в воскресенье</string>
    <!-- Strings related to LessonView -->
    <string name="lec_view_title_1">Лекция</string>
    <string name="lec_view_title_2">Парктика</string>
    <string name="lec_view_title_3">Лабораторная</string>
    <string name="lec_view_title_4">Семинар</string>
    <string name="title_activity_first_setting">FirstSettingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- Strings related to TimeTableAdapter -->
    <string name="no_lesson">Нет пары</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_main_wear">MainWearActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
</resources>
