<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.anton.npinowbeta.FirstSettingActivity">

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/doneBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent" />

    <TextView
        android:text="@string/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:id="@+id/hello_text"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent"/>

    <TextView
        android:text="@string/descriptionhello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello_text"
        android:layout_alignStart="@+id/hello_text"
        android:layout_marginTop="14dp"
        android:id="@+id/textView3" />

    <ListView
        android:id="@+id/setting_list"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/doneBtn"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:divider="@android:color/transparent"/>



</RelativeLayout>
