<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.anton.npinowbeta.NewTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_newTask_height"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_newTask_height"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_marginTop="6dp"
                    android:paddingRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType=
                            "textCapSentences|textAutoCorrect"
                        android:id="@+id/edit_title"
                        android:hint="@string/task_title"
                        android:layout_alignParentStart="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
                    <EditText
                        android:padding="5dp"
                        android:layout_below="@id/edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxHeight="170dp"
                        android:inputType=
                            "textCapSentences|textAutoCorrect|textMultiLine"
                        android:id="@+id/edit_task"
                        android:gravity="top"
                        android:hint="@string/task_task"
                        android:background="@android:color/transparent"/>

                    <TextView
                        android:layout_alignParentBottom="true"
                        android:padding="5dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/notification_stat_def"
                        android:textSize="12sp"
                        android:background="@color/NoTime"
                        android:id="@+id/notification_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_new_task" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_done_white" />

</android.support.design.widget.CoordinatorLayout>
